--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,12 +17,13 @@
 }
 
 body {
-    background-color: #fff;
-    width: 100%;
-  
+    font-family: Raleway-Regular, sans-serif;
+    font-size: 14px;
+    color: #333;
+    background-color: #f4f4f4;
 }
 footer {
-    color: #fff;
+    background-color: #f4f4f4;
   }
 
 
